@@ -4,6 +4,7 @@ xp-maven-plugin (3.1.9)
   * Add "xp:source" goal to pack project sources
   * Unify forked/non-forked custom goals (xp:run/xp:run-no-fork and xp:source and xp:source-no-fork)
   * Remove the "run" lifecycle as "xp:run" now forks the "xar" lifecycle
+  * Add ${xp.source.skip} to skip source packing
 
  -- Marius Rosoiu <marius.rosoiu@1and1.ro> Fri, 15 Nov 2012
 
